--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 
 <body>
     <h1>Bienvenue sur le portfolio de OverTex</h1>
+    </br>
+    </br>
+    <h2>Bonjour! <br> Je suis OverTex, j'ai 16 ans et je suis un scripteur de niveau intermédiaire, c'est à dire que j'ai de bonnes bases en LUA et je propose donc mes services pour des commissions ou des jeux plutôt simple a programmer. Je suis quelqu'un de motivé et j'aime apprendre, je suis aussi extrêmement libre niveau horaire ce qui fait que je developpe plutôt rapidement. (Mon prix dépendra de la demande)</h2>
+    <h3></h3>
+    </br>
+    </br>
 
     <div class="card">
-        <h2>Accueil </h2> <!-- Quelques définitions -->
+        <h2>Accueil </h2> <!-- index -->
     </div>
     <div id="SecondBloc" class="card">
-        <h2><a href= "page2.html" >Creations</a> </h2> <!-- Windows, MAC OS, Android -->
+        <h2><a href= "page2.html" >Creations</a> </h2> <!-- Page 2 -->
     </div>
     <div id="SecondBloc" class="card">
-        <h2><a href= "page2.html" >Games</a> </h2> <!-- Linux, les windows professionels -->
+        <h2><a href= "page2.html" >Games</a> </h2> <!-- Page 3 -->
     </div>
 
     <br>
@@ -29,8 +35,8 @@
     <br>
     <br>
     <br>
-    <h2>Bonjour! <br> Je suis OverTex, j'ai 16 ans et je suis un scripteur de niveau intermédiaire, c'est à dire que j'ai de bonnes bases en LUA et je propose donc mes services pour des commissions ou des jeux plutôt simple a programmer. Je suis quelqu'un de motivé et j'aime apprendre, je suis aussi extrêmement libre niveau horaire ce qui fait que je developpe plutôt rapidement. (Mon prix dépendra de la demande)</h2>
-    
+        
+    <video controls width="1000" height="500" src="Images/TLA.mp4">error</video>
     <h3><center>OverTex | overtex3782</center></h3>
 </body>
 </html>
