--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OverTex's Portfolio</title>
     <link rel=" stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,11 +34,22 @@
     <br>
     <br>
     
-    <h1>TLA - Showcase :</h1>
-    <iframe width="1000" height="500"
-    src="https://www.youtube.com/watch?v=LtrlZHDAC_Q">
-    </iframe>
+    <h1>2. TLA - Showcase :</h1>
+    <iframe width="960" height="540" src="https://www.youtube.com/embed/LtrlZHDAC_Q?si=i9YpUCFEXO9agmOo" &vq=hd720 ou ?vq=hd720 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>Dans ce jeu, je me suis occuper du code et des UI, mon ami lui c'est occuper de la modélisation/build</h2>
+    <h2>Le lien du jeu est disponible dans la page "jeux"</h2>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>3. 2D Platformer - Showcase</h1>
+    <iframe width="960" height="540" src="https://www.youtube.com/embed/-lVke3GYgd0?si=9cSJJrH7POiZgC7C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h2>Dans ce jeu, j'ai tout fait seul, c'était un jeu pour m'amuser</h2>
     <h2>Le lien du jeu est disponible dans la page "jeux"</h2>
 
     <br>
