--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OverTex's Portfolio</title>
     <link rel=" stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+    <img src="Images/Images/ProfileImage.jpg" alt="" >
+
+
     <h1>Bienvenue sur le portfolio de OverTex</h1>
     </br>
     </br>
