--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,7 @@
 
 <body>
     <h1>OverTex's Portfolio</h1>
+
     <div class="card">
         <h2><a href= "index.html" >Accueil</a> </h2> <!-- index -->
     </div>
@@ -22,7 +23,7 @@
         <h2>Creations</a> </h2> <!-- Page 2 -->
     </div>
     <div id="SecondBloc" class="card">
-        <h2><a href= "page3.html" >Games</a> </h2> <!-- Page 3 -->
+        <h2><a href= "page3.html" >Jeux</a> </h2> <!-- Page 3 -->
     </div>
 
     <br>
@@ -33,8 +34,16 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <h1><center><u>CREATIONS:</u></center></h1>
+
+    <br>
+    <br>
+    <br>
+    <br>
     
-    <h1>2. TLA - Showcase :</h1>
+    <h1>1. TLA - Showcase :</h1>
     <iframe width="960" height="540" src="https://www.youtube.com/embed/LtrlZHDAC_Q?si=i9YpUCFEXO9agmOo" &vq=hd720 ou ?vq=hd720 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>Dans ce jeu, je me suis occuper du code et des UI, mon ami lui c'est occuper de la modélisation/build</h2>
     <h2>Le lien du jeu est disponible dans la page "jeux"</h2>
@@ -47,14 +56,25 @@
     <br>
     <br>
     <br>
-    <h1>3. 2D Platformer - Showcase</h1>
-    <iframe width="960" height="540" src="https://www.youtube.com/embed/-lVke3GYgd0?si=9cSJJrH7POiZgC7C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h1>2. 2D Platformer - Showcase</h1>
+    <iframe width="960" height="540" src="https://www.youtube.com/embed/-lVke3GYgd0?si=9cSJJrH7POiZgC7C" &vq=hd720 ou ?vq=hd720 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>Dans ce jeu, j'ai tout fait seul, c'était un jeu pour m'amuser</h2>
     <h2>Le lien du jeu est disponible dans la page "jeux"</h2>
 
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>3. Machine a cafe - Commission</h1>
+    <iframe width="960" height="540" src="https://www.youtube.com/embed/gcm3883BMAY?si=_nMAmkW__66DGt_w" &vq=hd720 ou ?vq=hd720 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h2>C'est une commission que j'ai du faire pour quelqu'un. Bien sur il fonctionne a 100% (impossible de lancer deux cafes, d'éteindre la machine pendant qu'un café est lancer etc...)</h2>
+
+    <br>
     <br>
     <h3><center>OverTex | overtex3782</center></h3>
-    <!-- <video controls width="1000" height="500" src="Images/TLA.mp4">error</video>
-    <h3><center>OverTex | overtex3782</center></h3> -->
 </body>
 </html>
