--- a/page3.html
+++ b/page3.html
@@ -14,27 +14,15 @@
 </head>
 
 <body>
-    <img src="Images/Images/ProfileImage.jpg" alt="" >
-
-
-    <h1>Bienvenue sur le portfolio de OverTex</h1>
-    </br>
-    </br>
-    <h2>Bonjour! <br> Je suis OverTex, j'ai 16 ans et je suis un scripteur de niveau intermédiaire, c'est à dire que j'ai de bonnes bases en LUA et je propose donc mes services pour des commissions ou des jeux plutôt simple a programmer. Je suis quelqu'un de motivé et j'aime apprendre, je suis aussi extrêmement libre niveau horaire ce qui fait que je developpe plutôt rapidement. (Mon prix dépendra de la demande)</h2>
-    <h3></h3>
-    </br>
-    </br>
-    </br>
-    <h2>Version 1.0 | 23/03/24</h2>
-
+    <h1>OverTex's Portfolio</h1>
     <div class="card">
-        <h2>Accueil </h2> <!-- index -->
+        <h2><a href= "index.html" >Accueil</a> </h2> <!-- index -->
     </div>
     <div id="SecondBloc" class="card">
         <h2><a href= "page2.html" >Creations</a> </h2> <!-- Page 2 -->
     </div>
     <div id="SecondBloc" class="card">
-        <h2><a href= "page3.html" >Jeux</a> </h2> <!-- Page 3 -->
+        <h2>Jeux </h2> <!-- Page 3 -->
     </div>
 
     <br>
@@ -44,6 +32,21 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
+    <h1><center><u>GAMES:</u></center></h1>
+    <h1>1. <a href="https://www.roblox.com/games/13155896817/The-Last-Apocalypse">The Last Apocalypse </a>- Full game</h1>
+    <h2>Dans ce jeu, je me suis occuper du code et des UI, mon ami lui c'est occuper de la modélisation/build</h2>
+    <h2>Une vidéo du jeu est disponible dans la page "creations"</h2>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    
+    
     <br>
     <h3><center>OverTex | overtex3782</center></h3>
 </body>
