--- a/index.html
+++ b/index.html
@@ -1,50 +1,72 @@
-<!DOCTYPE html>
+<!-- Coming Soon WebPage Template -->
+<!--      Created by Avada        -->
+<!doctype html>
 <html lang="en">
 
+<!-- HEAD -->
 <head>
+    <!-- meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OverTex's Portfolio</title>
-    <link rel=" stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- title -->
+    <title>OverTex's Portfolio</title>
+
+    <!-- link css -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
+<!-- BODY -->
 <body>
-    <img src="Images/Images/ProfileImage.jpg" alt="" >
+    <main>
+        <!-- Different Color -->
+        <div id="purple-light"></div>
+        <div id="blue-light"></div>
+        <div id="dark-light"></div>
 
-
-    <h1>Bienvenue sur le portfolio de OverTex</h1>
-    </br>
-    </br>
-    <h2>Bonjour! <br> Je suis OverTex, j'ai 16 ans et je suis un scripteur de niveau intermédiaire, c'est à dire que j'ai de bonnes bases en LUA et je propose donc mes services pour des commissions ou des jeux plutôt simple a programmer. Je suis quelqu'un de motivé et j'aime apprendre, je suis aussi extrêmement libre niveau horaire ce qui fait que je developpe plutôt rapidement. (Mon prix dépendra de la demande)</h2>
-    <h3></h3>
-    </br>
-    </br>
-    </br>
-    <h2>Version 1.0 | 23/03/24</h2>
-
-    <div class="card">
-        <h2>Accueil </h2> <!-- index -->
-    </div>
-    <div id="SecondBloc" class="card">
-        <h2><a href= "page2.html" >Creations</a> </h2> <!-- Page 2 -->
-    </div>
-    <div id="SecondBloc" class="card">
-        <h2><a href= "page3.html" >Jeux</a> </h2> <!-- Page 3 -->
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h3><center>OverTex | overtex3782</center></h3>
+        <!-- Text and Btn -->
+        <div>
+            <br>
+            <br>
+            <br>
+            <img src="/Images/youtube-video-gif.gif" alt="" >
+            <br>
+            <br>
+            <h1>Welcome to OverTex's Portfolio</h1>
+            <h2>Hi, I’m OverTex, a 17 year old scripter from France and I created this portfolio to share my various creations on Roblox.</h2>
+            <h2>I started coding around the age of 12 on "Scratch". Then while playing Roblox, I became interested by scripting on Roblox. I really enjoy being part of this community and being able to help people with my codes.</h2>
+            
+            <br>
+            <br>
+            <div>
+                <a href="index.html">Home</a>
+            </div>
+            <div>
+                <a href="Creations.html">Creations</a>
+            </div>
+            <div>
+                <a href="Games.html">Games</a>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div>
+                <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.2477 1.58873C14.0651 1.07279 12.8166 0.706761 11.5342 0.5C11.3587 0.798946 11.1999 1.10652 11.0585 1.42144C9.69244 1.22528 8.30325 1.22528 6.93721 1.42144C6.79571 1.10655 6.63693 0.798982 6.46151 0.5C5.17825 0.708507 3.92895 1.0754 2.74514 1.59143C0.394983 4.90484 -0.242108 8.13595 0.0764374 11.3212C1.45275 12.2902 2.99324 13.0271 4.63094 13.5C4.9997 13.0274 5.326 12.526 5.60639 12.0011C5.07383 11.8116 4.55982 11.5778 4.07029 11.3023C4.19913 11.2133 4.32513 11.1215 4.44689 11.0325C5.87128 11.6708 7.42593 12.0018 8.99997 12.0018C10.574 12.0018 12.1287 11.6708 13.5531 11.0325C13.6762 11.1283 13.8022 11.22 13.9296 11.3023C13.4392 11.5782 12.9242 11.8125 12.3907 12.0025C12.6708 12.5271 12.9971 13.0281 13.3662 13.5C15.0053 13.029 16.5469 12.2924 17.9235 11.3225C18.2973 7.62868 17.285 4.42725 15.2477 1.58873ZM6.00988 9.36229C5.1222 9.36229 4.38884 8.59464 4.38884 7.65027C4.38884 6.70589 5.09672 5.93151 6.00705 5.93151C6.91739 5.93151 7.64509 6.70589 7.62951 7.65027C7.61394 8.59464 6.91456 9.36229 6.00988 9.36229ZM11.9901 9.36229C11.101 9.36229 10.3704 8.59464 10.3704 7.65027C10.3704 6.70589 11.0783 5.93151 11.9901 5.93151C12.9018 5.93151 13.6238 6.70589 13.6083 7.65027C13.5927 8.59464 12.8947 9.36229 11.9901 9.36229Z" 
+                    fill="#7d47bb"/>
+                </svg>
+                <a href="">overtex3782</a>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h4>I take this opportunity to thank all the people I have been able to collaborate with.</h4>
+        </div>
+    </main>
 </body>
+
 </html>
