--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <br>
             <br>
-            <img src="/Images/youtube-video-gif.gif" alt="" >
+            <img src="/Images/noFilter.png" alt="" >
             <br>
             <br>
             <h1>Welcome to OverTex's Portfolio</h1>
