--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,15 @@
     <div id="blue-light"></div>
     <div id="dark-light"></div>
 
-    <main class="Games">
+    <main class="Contact">
         <p></p>
-        <h1>COMING SOON</h1>
+        <h1>Contacts :</h1>
+        <p></p>
+        <h2></h2>
+        <h2>Discord: overtex3872</h2>
+        <p></p>
+        <a class="aContact" href="https://www.roblox.com/fr/users/2041535010/profile">Roblox: overtex66</a>
+        <p></p>
+        <h2>Mail: oz.overtex@gmail.com</h2>
     </main>
 </body>
