--- a/Creations.html
+++ b/Creations.html
@@ -18,7 +18,7 @@
         <h1 class="Titre">OverTex's Portfolio</h1>
         <nav>
             <ul class="nav__links">
-                <div class="Buttons"><a href="https://overtex667.github.io/Portfolio/">Home</a></div>
+                <div class="Buttons"><a href="index.html">Home</a></div>
                 <div class="Buttons"><a href="creations.html">Creations</a></div>
                 <div class="Buttons"><a href="games.html">Games</a></div>
             </ul>
