--- a/Creations.html
+++ b/Creations.html
@@ -35,7 +35,7 @@
         <h1>1. Inventory System :</h1>
         <p></p>
         <div class="video-container">
-            <iframe width="960" height="540" src="https://www.youtube.com/watch?v=2IfEsYWcFq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/2IfEsYWcFq8?si=3gI646UushWMB9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h2>Customizable inventory system with a hotbar, an inventory, and a trash system.  
                 The hotbar has 4 slot groups (from left to right: Card, Weapons, Utilities, Secondary) with 2 types of slots:  
                 - Visible empty slots (Card, Weapon, Secondary)  
@@ -51,7 +51,7 @@
         <h1>2. NPC area :</h1>
         <p></p>
         <div class="video-container">
-            <iframe width="960" height="540" src="https://www.youtube.com/watch?v=e1kKhz9SJYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/e1kKhz9SJYc?si=UnBYzd00UokLIcqm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h2>A system where NPCs walk around randomly., Pink blocks are spawners (where NPCs appear), Red blocks are corners. When an NPC reaches a red block, it changes direction by choosing a neighboring red block (so it stays on the path). 
                 <br><br>The number of NPCs on the map can be customized with a single variable: <br><span>local max_npc = 10</span> -- Maximum number of NPCs at the same time.</h2>
         </div>
